force-app/main/default/objects/Forrester_Case__x/Forrester_Case__x.object-meta.xml
<CustomObject>
    <description>Forrester_Case</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_VIEW</externalName>
    <label>Case</label>
    <pluralLabel>Cases</pluralLabel>
</CustomObject>