force-app/main/default/objects/Forrester_Case__x/fields/ALL_LAWFIRMS_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ALL_LAWFIRMS_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ALL_LAWFIRMS_FLAG</description>
    <externalDeveloperName>ALL_LAWFIRMS_FLAG</externalDeveloperName>
    <label>Lawfirms Flag</label>
    <type>Checkbox</type>
</CustomField>