force-app/main/default/objects/Forrester_Case__x/fields/ANTIC_PUB_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>ANTIC_PUB_COMMENT__c</fullName>
    <description>ANTIC_PUB_COMMENT</description>
    <externalDeveloperName>ANTIC_PUB_COMMENT</externalDeveloperName>
    <label>Antic Pub Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>