force-app/main/default/objects/Forrester_Case__x/fields/ANTIC_PUB_DISC_YN__c.field-meta.xml
<CustomField>
    <fullName>ANTIC_PUB_DISC_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ANTIC_PUB_DISC_YN</description>
    <externalDeveloperName>ANTIC_PUB_DISC_YN</externalDeveloperName>
    <label>Anticipate Publish Flag</label>
    <type>Checkbox</type>
</CustomField>