force-app/main/default/objects/Forrester_Case__x/fields/ANTIC_PUBLISH_DATE__c.field-meta.xml
<CustomField>
    <fullName>ANTIC_PUBLISH_DATE__c</fullName>
    <description>ANTIC_PUBLISH_DATE</description>
    <externalDeveloperName>ANTIC_PUBLISH_DATE</externalDeveloperName>
    <label>Anticipate Published</label>
    <type>Date</type>
</CustomField>