force-app/main/default/objects/Forrester_Case__x/fields/CASE_CUTOVER_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CASE_CUTOVER_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CASE_CUTOVER_FLAG</description>
    <externalDeveloperName>CASE_CUTOVER_FLAG</externalDeveloperName>
    <label>Case Cut Over Flag</label>
    <type>Checkbox</type>
</CustomField>