force-app/main/default/objects/Forrester_Case__x/fields/CASE_NO_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>CASE_NO_SUFFIX__c</fullName>
    <description>CASE_NO_SUFFIX</description>
    <externalDeveloperName>CASE_NO_SUFFIX</externalDeveloperName>
    <label>Case No Suffix</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>