force-app/main/default/objects/Forrester_Case__x/fields/CASE_SPONSOR_NAMES__c.field-meta.xml
<CustomField>
    <fullName>CASE_SPONSOR_NAMES__c</fullName>
    <description>CASE_SPONSOR_NAMES</description>
    <externalDeveloperName>CASE_SPONSOR_NAMES</externalDeveloperName>
    <label>Sponsor Names</label>
    <length>4000</length>
    <type>Text</type>
</CustomField>