force-app/main/default/objects/Forrester_Case__x/fields/CASE_SUMMARY_MOD_DATE__c.field-meta.xml
<CustomField>
    <fullName>CASE_SUMMARY_MOD_DATE__c</fullName>
    <description>CASE_SUMMARY_MOD_DATE</description>
    <externalDeveloperName>CASE_SUMMARY_MOD_DATE</externalDeveloperName>
    <label>Case Summary Mod Date</label>
    <type>DateTime</type>
</CustomField>