force-app/main/default/objects/Forrester_Case__x/fields/CLOSE_DATE__c.field-meta.xml
<CustomField>
    <fullName>CLOSE_DATE__c</fullName>
    <description>CLOSE_DATE</description>
    <externalDeveloperName>CLOSE_DATE</externalDeveloperName>
    <label>Closed</label>
    <type>Date</type>
</CustomField>