force-app/main/default/objects/Forrester_Case__x/fields/CO_INVENTORS__c.field-meta.xml
<CustomField>
    <fullName>CO_INVENTORS__c</fullName>
    <description>INVENTOR_S_LN</description>
    <externalDeveloperName>INVENTOR_S_LN</externalDeveloperName>
    <label>Co Inventors</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>