force-app/main/default/objects/Forrester_Case__x/fields/CONCEPTION_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>CONCEPTION_COMMENT__c</fullName>
    <description>CONCEPTION_COMMENT</description>
    <externalDeveloperName>CONCEPTION_COMMENT</externalDeveloperName>
    <label>Conception Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>