force-app/main/default/objects/Forrester_Case__x/fields/CONCEPTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>CONCEPTION_DATE__c</fullName>
    <description>CONCEPTION_DATE</description>
    <externalDeveloperName>CONCEPTION_DATE</externalDeveloperName>
    <label>Conception Date</label>
    <type>DateTime</type>
</CustomField>