force-app/main/default/objects/Forrester_Case__x/fields/CONFIRMED_FUNDING__c.field-meta.xml
<CustomField>
    <fullName>CONFIRMED_FUNDING__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CONFIRMED_FUNDING</description>
    <externalDeveloperName>CONFIRMED_FUNDING</externalDeveloperName>
    <label>Confirmed Funding</label>
    <type>Checkbox</type>
</CustomField>