force-app/main/default/objects/Forrester_Case__x/fields/CPI_CASE_NUM__c.field-meta.xml
<CustomField>
    <fullName>CPI_CASE_NUM__c</fullName>
    <description>CPI_CASE_NUM</description>
    <externalDeveloperName>CPI_CASE_NUM</externalDeveloperName>
    <label>Cpi Case Num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>