force-app/main/default/objects/Forrester_Case__x/fields/DISC_FORM_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>DISC_FORM_SENT_DATE__c</fullName>
    <description>DISC_FORM_SENT_DATE</description>
    <externalDeveloperName>DISC_FORM_SENT_DATE</externalDeveloperName>
    <label>Disc Form Sent Date</label>
    <type>DateTime</type>
</CustomField>