force-app/main/default/objects/Forrester_Case__x/fields/DISCLOSURE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>DISCLOSURE_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DISCLOSURE_FLAG</description>
    <externalDeveloperName>DISCLOSURE_FLAG</externalDeveloperName>
    <label>Disclosure Flag</label>
    <type>Checkbox</type>
</CustomField>