force-app/main/default/objects/Forrester_Case__x/fields/EDISON_CREATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>EDISON_CREATE_DATE__c</fullName>
    <description>EDISON_CREATE_DATE</description>
    <externalDeveloperName>EDISON_CREATE_DATE</externalDeveloperName>
    <label>Edison Created Date</label>
    <type>DateTime</type>
</CustomField>