force-app/main/default/objects/Forrester_Case__x/fields/EDISON_UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>EDISON_UPDATE_DATE__c</fullName>
    <description>EDISON_UPDATE_DATE</description>
    <externalDeveloperName>EDISON_UPDATE_DATE</externalDeveloperName>
    <label>Edison Update Date</label>
    <type>DateTime</type>
</CustomField>