force-app/main/default/objects/Forrester_Case__x/fields/ELECTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>ELECTION_DATE__c</fullName>
    <description>ELECTION_DATE</description>
    <externalDeveloperName>ELECTION_DATE</externalDeveloperName>
    <label>Election Date</label>
    <type>DateTime</type>
</CustomField>