force-app/main/default/objects/Forrester_Case__x/fields/ELECTION_NOTIF_DATE__c.field-meta.xml
<CustomField>
    <fullName>ELECTION_NOTIF_DATE__c</fullName>
    <description>ELECTION_NOTIF_DATE</description>
    <externalDeveloperName>ELECTION_NOTIF_DATE</externalDeveloperName>
    <label>Election Notif Date</label>
    <type>DateTime</type>
</CustomField>