force-app/main/default/objects/Forrester_Case__x/fields/ELECTION_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ELECTION_STATUS__c</fullName>
    <description>ELECTION_STATUS</description>
    <externalDeveloperName>ELECTION_STATUS</externalDeveloperName>
    <label>Election Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>