force-app/main/default/objects/Forrester_Case__x/fields/ELECTRONIC_DISCLOSURE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ELECTRONIC_DISCLOSURE_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ELECTRONIC_DISCLOSURE_FLAG</description>
    <externalDeveloperName>ELECTRONIC_DISCLOSURE_FLAG</externalDeveloperName>
    <label>Electronic Disclosure Flag</label>
    <type>Checkbox</type>
</CustomField>