force-app/main/default/objects/Forrester_Case__x/fields/EQUITY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>EQUITY_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EQUITY_FLAG</description>
    <externalDeveloperName>EQUITY_FLAG</externalDeveloperName>
    <label>Equity Flag</label>
    <type>Checkbox</type>
</CustomField>