force-app/main/default/objects/Forrester_Case__x/fields/ESTIMATE_REQUIRED_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ESTIMATE_REQUIRED_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ESTIMATE_REQUIRED_FLAG</description>
    <externalDeveloperName>ESTIMATE_REQUIRED_FLAG</externalDeveloperName>
    <label>Estimate Required Flag</label>
    <type>Checkbox</type>
</CustomField>