force-app/main/default/objects/Forrester_Case__x/fields/FEDERAL_COMPLIANCE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>FEDERAL_COMPLIANCE_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FEDERAL_COMPLIANCE_FLAG</description>
    <externalDeveloperName>FEDERAL_COMPLIANCE_FLAG</externalDeveloperName>
    <label>Federal Compliance Flag</label>
    <type>Checkbox</type>
</CustomField>