force-app/main/default/objects/Forrester_Case__x/fields/FEDERAL_SPONSOR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>FEDERAL_SPONSOR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FEDERAL_SPONSOR_FLAG</description>
    <externalDeveloperName>FEDERAL_SPONSOR_FLAG</externalDeveloperName>
    <label>Federal Sponsor</label>
    <type>Checkbox</type>
</CustomField>