force-app/main/default/objects/Forrester_Case__x/fields/FIRST_ORAL_DISC__c.field-meta.xml
<CustomField>
    <fullName>FIRST_ORAL_DISC__c</fullName>
    <description>FIRST_ORAL_DISC</description>
    <externalDeveloperName>FIRST_ORAL_DISC</externalDeveloperName>
    <label>Oral Disclosure</label>
    <type>Date</type>
</CustomField>