force-app/main/default/objects/Forrester_Case__x/fields/FIRST_ORAL_DISC_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>FIRST_ORAL_DISC_COMMENT__c</fullName>
    <description>FIRST_ORAL_DISC_COMMENT</description>
    <externalDeveloperName>FIRST_ORAL_DISC_COMMENT</externalDeveloperName>
    <label>First Oral Disc Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>