force-app/main/default/objects/Forrester_Case__x/fields/FIRST_PUB_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>FIRST_PUB_COMMENT__c</fullName>
    <description>FIRST_PUB_COMMENT</description>
    <externalDeveloperName>FIRST_PUB_COMMENT</externalDeveloperName>
    <label>First Pub Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>