force-app/main/default/objects/Forrester_Case__x/fields/FIRST_PUBLISH_DATE__c.field-meta.xml
<CustomField>
    <fullName>FIRST_PUBLISH_DATE__c</fullName>
    <description>FIRST_PUBLISH_DATE</description>
    <externalDeveloperName>FIRST_PUBLISH_DATE</externalDeveloperName>
    <label>Published</label>
    <type>Date</type>
</CustomField>