force-app/main/default/objects/Forrester_Case__x/fields/FUNDING_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>FUNDING_DETAILS__c</fullName>
    <description>FUNDING_DETAILS</description>
    <externalDeveloperName>FUNDING_DETAILS</externalDeveloperName>
    <label>Funding Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>