force-app/main/default/objects/Forrester_Case__x/fields/GOVERNMENT_COMPLY_OVERRIDE_FLG__c.field-meta.xml
<CustomField>
    <fullName>GOVERNMENT_COMPLY_OVERRIDE_FLG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GOVERNMENT_COMPLY_OVERRIDE_FLG</description>
    <externalDeveloperName>GOVERNMENT_COMPLY_OVERRIDE_FLG</externalDeveloperName>
    <label>Government Compliance</label>
    <type>Checkbox</type>
</CustomField>