force-app/main/default/objects/Forrester_Case__x/fields/GOVT_SPONSOR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>GOVT_SPONSOR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GOVT_SPONSOR_FLAG</description>
    <externalDeveloperName>GOVT_SPONSOR_FLAG</externalDeveloperName>
    <label>Government Comp. Candidate</label>
    <type>Checkbox</type>
</CustomField>