force-app/main/default/objects/Forrester_Case__x/fields/INDUSTRIAL_COMPLIANCE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIAL_COMPLIANCE_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INDUSTRIAL_COMPLIANCE_FLAG</description>
    <externalDeveloperName>INDUSTRIAL_COMPLIANCE_FLAG</externalDeveloperName>
    <label>Industrial Compliance Flag</label>
    <type>Checkbox</type>
</CustomField>