force-app/main/default/objects/Forrester_Case__x/fields/INDUSTRIAL_COMPLIANCE_REQD__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIAL_COMPLIANCE_REQD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INDUSTRIAL_COMPLIANCE_REQD</description>
    <externalDeveloperName>INDUSTRIAL_COMPLIANCE_REQD</externalDeveloperName>
    <label>Industrial Sponsor</label>
    <type>Checkbox</type>
</CustomField>