force-app/main/default/objects/Forrester_Case__x/fields/INDUSTRIAL_COMPLY_OVERRIDE_FLG__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIAL_COMPLY_OVERRIDE_FLG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INDUSTRIAL_COMPLY_OVERRIDE_FLG</description>
    <externalDeveloperName>INDUSTRIAL_COMPLY_OVERRIDE_FLG</externalDeveloperName>
    <label>Industrial Compliance</label>
    <type>Checkbox</type>
</CustomField>