force-app/main/default/objects/Forrester_Case__x/fields/INDUSTRIAL_RIGHTS_EXERCISED__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIAL_RIGHTS_EXERCISED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INDUSTRIAL_RIGHTS_EXERCISED</description>
    <externalDeveloperName>INDUSTRIAL_RIGHTS_EXERCISED</externalDeveloperName>
    <label>Industrial Rights Elected</label>
    <type>Checkbox</type>
</CustomField>