force-app/main/default/objects/Forrester_Case__x/fields/INDUSTRIAL_RIGHTS_EXIST__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIAL_RIGHTS_EXIST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INDUSTRIAL_RIGHTS_EXIST</description>
    <externalDeveloperName>INDUSTRIAL_RIGHTS_EXIST</externalDeveloperName>
    <label>Industrial Rights Exist</label>
    <type>Checkbox</type>
</CustomField>