force-app/main/default/objects/Forrester_Case__x/fields/INVENTOR_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_COMMENT__c</fullName>
    <description>INVENTOR_COMMENT</description>
    <externalDeveloperName>INVENTOR_COMMENT</externalDeveloperName>
    <label>Inventor Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>