force-app/main/default/objects/Forrester_Case__x/fields/IS_COPYRIGHT_MASKWORKS__c.field-meta.xml
<CustomField>
    <fullName>IS_COPYRIGHT_MASKWORKS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_COPYRIGHT_MASKWORKS</description>
    <externalDeveloperName>IS_COPYRIGHT_MASKWORKS</externalDeveloperName>
    <label>Is Copyright Maskwork</label>
    <type>Checkbox</type>
</CustomField>