force-app/main/default/objects/Forrester_Case__x/fields/IS_COPYRIGHT_OTHER__c.field-meta.xml
<CustomField>
    <fullName>IS_COPYRIGHT_OTHER__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_COPYRIGHT_OTHER</description>
    <externalDeveloperName>IS_COPYRIGHT_OTHER</externalDeveloperName>
    <label>Is Copyright Other</label>
    <type>Checkbox</type>
</CustomField>