force-app/main/default/objects/Forrester_Case__x/fields/IS_COPYRIGHT_SW__c.field-meta.xml
<CustomField>
    <fullName>IS_COPYRIGHT_SW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_COPYRIGHT_SW</description>
    <externalDeveloperName>IS_COPYRIGHT_SW</externalDeveloperName>
    <label>Is Copyright Sw</label>
    <type>Checkbox</type>
</CustomField>