force-app/main/default/objects/Forrester_Case__x/fields/IS_DESIGN_PATENT__c.field-meta.xml
<CustomField>
    <fullName>IS_DESIGN_PATENT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_DESIGN_PATENT</description>
    <externalDeveloperName>IS_DESIGN_PATENT</externalDeveloperName>
    <label>Is Design Patent</label>
    <type>Checkbox</type>
</CustomField>