force-app/main/default/objects/Forrester_Case__x/fields/IS_PATENT__c.field-meta.xml
<CustomField>
    <fullName>IS_PATENT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_PATENT</description>
    <externalDeveloperName>IS_PATENT</externalDeveloperName>
    <label>Is Patent</label>
    <type>Checkbox</type>
</CustomField>