force-app/main/default/objects/Forrester_Case__x/fields/IS_TANGIBLE_BIOLOGICAL__c.field-meta.xml
<CustomField>
    <fullName>IS_TANGIBLE_BIOLOGICAL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_TANGIBLE_BIOLOGICAL</description>
    <externalDeveloperName>IS_TANGIBLE_BIOLOGICAL</externalDeveloperName>
    <label>Is Tangible Biological</label>
    <type>Checkbox</type>
</CustomField>