force-app/main/default/objects/Forrester_Case__x/fields/IS_TANGIBLE_OTHER__c.field-meta.xml
<CustomField>
    <fullName>IS_TANGIBLE_OTHER__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_TANGIBLE_OTHER</description>
    <externalDeveloperName>IS_TANGIBLE_OTHER</externalDeveloperName>
    <label>Is Tangible Other</label>
    <type>Checkbox</type>
</CustomField>