force-app/main/default/objects/Forrester_Case__x/fields/IS_TRADEMARK__c.field-meta.xml
<CustomField>
    <fullName>IS_TRADEMARK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IS_TRADEMARK</description>
    <externalDeveloperName>IS_TRADEMARK</externalDeveloperName>
    <label>Is Trademark</label>
    <type>Checkbox</type>
</CustomField>