force-app/main/default/objects/Forrester_Case__x/fields/JOINT_OWNER_MULTI_LN__c.field-meta.xml
<CustomField>
    <fullName>JOINT_OWNER_MULTI_LN__c</fullName>
    <description>JOINT_OWNER_MULTI_LN</description>
    <externalDeveloperName>JOINT_OWNER_MULTI_LN</externalDeveloperName>
    <label>Joint Owner</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>