force-app/main/default/objects/Forrester_Case__x/fields/LAST_CRDR_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_CRDR_DATE__c</fullName>
    <description>LAST_CRDR_DATE</description>
    <externalDeveloperName>LAST_CRDR_DATE</externalDeveloperName>
    <label>Last Crdr Date</label>
    <type>DateTime</type>
</CustomField>