force-app/main/default/objects/Forrester_Case__x/fields/MENDIX_ID__c.field-meta.xml
<CustomField>
    <fullName>MENDIX_ID__c</fullName>
    <description>MENDIX_ID</description>
    <externalDeveloperName>MENDIX_ID</externalDeveloperName>
    <label>Mendix Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>