force-app/main/default/objects/Forrester_Case__x/fields/MIT_OWN_FLAG__c.field-meta.xml
<CustomField>
    <fullName>MIT_OWN_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIT_OWN_FLAG</description>
    <externalDeveloperName>MIT_OWN_FLAG</externalDeveloperName>
    <label>MIT Own Flag</label>
    <type>Checkbox</type>
</CustomField>