force-app/main/default/objects/Forrester_Case__x/fields/NON_COMPLIANCE_UPDATE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>NON_COMPLIANCE_UPDATE_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NON_COMPLIANCE_UPDATE_FLAG</description>
    <externalDeveloperName>NON_COMPLIANCE_UPDATE_FLAG</externalDeveloperName>
    <label>Non Compliance Update Flag</label>
    <type>Checkbox</type>
</CustomField>