force-app/main/default/objects/Forrester_Case__x/fields/OPEN_DATE__c.field-meta.xml
<CustomField>
    <fullName>OPEN_DATE__c</fullName>
    <description>OPEN_DATE</description>
    <externalDeveloperName>OPEN_DATE</externalDeveloperName>
    <label>Opened</label>
    <type>Date</type>
</CustomField>