force-app/main/default/objects/Forrester_Case__x/fields/OPEN_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>OPEN_SOURCE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OPEN_SOURCE</description>
    <externalDeveloperName>OPEN_SOURCE</externalDeveloperName>
    <label>Open Source</label>
    <type>Checkbox</type>
</CustomField>