force-app/main/default/objects/Forrester_Case__x/fields/ORAL_PRESENTATION_YN__c.field-meta.xml
<CustomField>
    <fullName>ORAL_PRESENTATION_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ORAL_PRESENTATION_YN</description>
    <externalDeveloperName>ORAL_PRESENTATION_YN</externalDeveloperName>
    <label>Oral Presentation YN</label>
    <type>Checkbox</type>
</CustomField>