force-app/main/default/objects/Forrester_Case__x/fields/OWNERSHIP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>OWNERSHIP_TYPE__c</fullName>
    <description>OWNERSHIP_TYPE</description>
    <externalDeveloperName>OWNERSHIP_TYPE</externalDeveloperName>
    <label>Ownership</label>
    <length>16</length>
    <type>Text</type>
</CustomField>