force-app/main/default/objects/Forrester_Case__x/fields/PART_OF_THESIS_YN__c.field-meta.xml
<CustomField>
    <fullName>PART_OF_THESIS_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PART_OF_THESIS_YN</description>
    <externalDeveloperName>PART_OF_THESIS_YN</externalDeveloperName>
    <label>Part Of Thesis YN</label>
    <type>Checkbox</type>
</CustomField>