force-app/main/default/objects/Forrester_Case__x/fields/PATENT_COUNT__c.field-meta.xml
<CustomField>
    <fullName>PATENT_COUNT__c</fullName>
    <description>PATENT_COUNT</description>
    <externalDeveloperName>PATENT_COUNT</externalDeveloperName>
    <label>Patent Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>