force-app/main/default/objects/Forrester_Case__x/fields/PATENT_FIRST_ADD_DATE__c.field-meta.xml
<CustomField>
    <fullName>PATENT_FIRST_ADD_DATE__c</fullName>
    <description>PATENT_FIRST_ADD_DATE</description>
    <externalDeveloperName>PATENT_FIRST_ADD_DATE</externalDeveloperName>
    <label>Patent First Add Date</label>
    <type>DateTime</type>
</CustomField>