force-app/main/default/objects/Forrester_Case__x/fields/PROVISIONAL_FIRST_ADD_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROVISIONAL_FIRST_ADD_DATE__c</fullName>
    <description>PROVISIONAL_FIRST_ADD_DATE</description>
    <externalDeveloperName>PROVISIONAL_FIRST_ADD_DATE</externalDeveloperName>
    <label>Provisional First Add Date</label>
    <type>DateTime</type>
</CustomField>