force-app/main/default/objects/Forrester_Case__x/fields/PUBLISHED_OR_DISCLOSED_YN__c.field-meta.xml
<CustomField>
    <fullName>PUBLISHED_OR_DISCLOSED_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PUBLISHED_OR_DISCLOSED_YN</description>
    <externalDeveloperName>PUBLISHED_OR_DISCLOSED_YN</externalDeveloperName>
    <label>Published Or Disclosed YN</label>
    <type>Checkbox</type>
</CustomField>