force-app/main/default/objects/Forrester_Case__x/fields/REDUCED_TO_PRACTICE__c.field-meta.xml
<CustomField>
    <fullName>REDUCED_TO_PRACTICE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>REDUCED_TO_PRACTICE</description>
    <externalDeveloperName>REDUCED_TO_PRACTICE</externalDeveloperName>
    <label>Reduced To Practice</label>
    <type>Checkbox</type>
</CustomField>