force-app/main/default/objects/Forrester_Case__x/fields/REDUCED_TO_PRACTICE_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>REDUCED_TO_PRACTICE_COMMENT__c</fullName>
    <description>REDUCED_TO_PRACTICE_COMMENT</description>
    <externalDeveloperName>REDUCED_TO_PRACTICE_COMMENT</externalDeveloperName>
    <label>Reduced To Practice Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>