force-app/main/default/objects/Forrester_Case__x/fields/REDUCED_TO_PRACTICE_DATE__c.field-meta.xml
<CustomField>
    <fullName>REDUCED_TO_PRACTICE_DATE__c</fullName>
    <description>REDUCED_TO_PRACTICE_DATE</description>
    <externalDeveloperName>REDUCED_TO_PRACTICE_DATE</externalDeveloperName>
    <label>Reduced To Practice Date</label>
    <type>DateTime</type>
</CustomField>