force-app/main/default/objects/Forrester_Case__x/fields/SORT_ORDER__c.field-meta.xml
<CustomField>
    <fullName>SORT_ORDER__c</fullName>
    <description>SORT_ORDER</description>
    <externalDeveloperName>SORT_ORDER</externalDeveloperName>
    <label>Sort Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>