force-app/main/default/objects/Forrester_Case__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>STATUS</description>
    <externalDeveloperName>STATUS</externalDeveloperName>
    <label>Status</label>
    <length>8</length>
    <type>Text</type>
</CustomField>