force-app/main/default/objects/Forrester_Case__x/fields/THESIS_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>THESIS_COMMENT__c</fullName>
    <description>THESIS_COMMENT</description>
    <externalDeveloperName>THESIS_COMMENT</externalDeveloperName>
    <label>Thesis Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>