force-app/main/default/objects/Forrester_Case__x/fields/THESIS_DEFENSE_DATE__c.field-meta.xml
<CustomField>
    <fullName>THESIS_DEFENSE_DATE__c</fullName>
    <description>THESIS_DEFENSE_DATE</description>
    <externalDeveloperName>THESIS_DEFENSE_DATE</externalDeveloperName>
    <label>Thesis Defense Date</label>
    <type>DateTime</type>
</CustomField>