force-app/main/default/objects/Forrester_Case__x/fields/THESIS_ON_HOLD_FLAG__c.field-meta.xml
<CustomField>
    <fullName>THESIS_ON_HOLD_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>THESIS_ON_HOLD_FLAG</description>
    <externalDeveloperName>THESIS_ON_HOLD_FLAG</externalDeveloperName>
    <label>Thesis On Hold</label>
    <type>Checkbox</type>
</CustomField>