force-app/main/default/objects/Forrester_Case__x/fields/TLA_NAME__c.field-meta.xml
<CustomField>
    <fullName>TLA_NAME__c</fullName>
    <description>TLA LICENSING_ASSOCIATE</description>
    <externalDeveloperName>TLA_NAME</externalDeveloperName>
    <label>TLA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>