force-app/main/default/objects/Forrester_Case__x/fields/TLO_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>TLO_EMAIL__c</fullName>
    <description>TLO_EMAIL</description>
    <externalDeveloperName>TLO_EMAIL</externalDeveloperName>
    <label>TLO Officer Email</label>
    <length>55</length>
    <type>Text</type>
</CustomField>