force-app/main/default/objects/Forrester_Case__x/fields/TLO_ID__c.field-meta.xml
<CustomField>
    <fullName>TLO_ID__c</fullName>
    <description>TLO_ID</description>
    <externalDeveloperName>TLO_ID</externalDeveloperName>
    <label>TLO Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>