force-app/main/default/objects/Forrester_Case__x/fields/TLO_NAME__c.field-meta.xml
<CustomField>
    <fullName>TLO_NAME__c</fullName>
    <description>TLO_NAME</description>
    <externalDeveloperName>TLO_NAME</externalDeveloperName>
    <label>TLO Officer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>