force-app/main/default/objects/Forrester_Case__x/fields/TYPE_OF_PRESENTATION__c.field-meta.xml
<CustomField>
    <fullName>TYPE_OF_PRESENTATION__c</fullName>
    <description>TYPE_OF_PRESENTATION</description>
    <externalDeveloperName>TYPE_OF_PRESENTATION</externalDeveloperName>
    <label>Type Of Presentation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>