force-app/main/default/objects/Forrester_Case__x/fields/US_GRANT_PCT__c.field-meta.xml
<CustomField>
    <fullName>US_GRANT_PCT__c</fullName>
    <description>US_GRANT_PCT</description>
    <externalDeveloperName>US_GRANT_PCT</externalDeveloperName>
    <label>US Grant Pct</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>