force-app/main/default/objects/Forrester_Case__x/fields/USE_MIT_RESOURCES__c.field-meta.xml
<CustomField>
    <fullName>USE_MIT_RESOURCES__c</fullName>
    <defaultValue>false</defaultValue>
    <description>USE_MIT_RESOURCES</description>
    <externalDeveloperName>USE_MIT_RESOURCES</externalDeveloperName>
    <label>Use MIT Resources</label>
    <type>Checkbox</type>
</CustomField>